--- a/index.html
+++ b/index.html
@@ -4,12 +4,51 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Crypto Icons</title>
+    <title>Cryptoflash Icons</title>
+    <style>
+      h1 {
+        font-size: 6rem;
+      }
+      p {
+        font-size: 2.5rem;
+      }
+      a {
+        color: blue;
+        text-decoration: none;
+      }
+      .container {
+        display: grid;
+        height: 100vh;
+        align-items: center;
+      }
+      .search {
+        width: 40%;
+        height: 30px;
+        border-radius: 20px;
+        padding-left: 15px;
+      }
+
+      .search_btn {
+        background: transparent;
+        border: none;
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
-    <center>
-      <h1>Crypto Icons</h1>
-      <p>API to get <h2></h2>crypto currency icons</p>
+    <center class="container">
+      <div>
+        <h1>Crypto Icons API</h1>
+        <p>Public API to get crypto currency icons in various formats</p>
+        <p>
+          See
+          <a
+            href="https://github.com/mdfarhaan/cryptoflash-icons-api/blob/main/README.md"
+            >Docs</a
+          >
+        </p>
+      </div>
     </center>
   </body>
 </html>
+
